# DownloadAgent

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml
agent/: bot.py
agent/config/: __init__.py
agent/downloader/: __init__.py  message_meida.py  qb.py  twitter.py  web_img.py  youtube.py  zip.py
agent/network/: __init__.py  request_url.py
